trunk/Archive2/2e/0c156e305c2111/output
main.cpp: In function 'int main()':
main.cpp:6:15: error: use of 'fact' before deduction of 'auto'
   auto fact=[&fact](int n)->int{
               ^
main.cpp:6:15: error: cannot capture '<expression error>' by reference
